# recovered-340

./: cs340.cabal
.stack-work/ghci/00b08934/: cabal_macros.h
.stack-work/install/x86_64-linux/lts-12.26/8.4.4/flag-cache/: cs340-0.1.0.0
cs340/: LICENSE.md  cs495.cabal  stack.yaml
cs340/.stack-work/ghci/77e35bd1/: cabal_macros.h
cs340/.stack-work/ghci/fede05d8/: cabal_macros.h
cs340/.stack-work/install/x86_64-linux/lts-7.11/8.0.1/flag-cache/: cs495-0.1.0.0
cs340/src/lect/: .13-monadic-parsing.hs.swp  02-functions.lhs  03-lists.lhs  04-basic-recursion.lhs  05-hof.lhs  06-folds.lhs  07-datatypes.lhs  08-data-structures.lhs  09-typeclasses.lhs  10-applicatives.lhs  11-monads.lhs  12-more-monads.lhs  13-monadic-parsing.hs  13-parsing.hs  14-search.lhs
cs340/src/lect-complete/: .12-more-monads.lhs.swp  01-basics.lhs  02-functions.lhs  03-lists.lhs  04-basic-recursion.lhs  05-hof.lhs  06-folds.lhs  07-datatypes.lhs  08-data-structures.lhs  09-typeclasses.lhs  10-applicatives.lhs  11-monads.lhs  12-more-monads.lhs  14-search.lhs
src/mp/: MP1.hs  MP4.hs
src/mp/mp/: mp3.hs  mp4.hs
