name:                cs495
version:             0.1.0.0
author:              Michael Saelee
maintainer:          lee@iit.edu
copyright:           2019 Michael Saelee
build-type:          Simple
cabal-version:       >=1.10

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5